[package]
name = "argos_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
indicatif = { version = "0.18.4", features = ["rayon"] }
log = "0.4.29"
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
